# rustycamera

./: Cargo.toml
src/: gui.rs  main.rs  render.rs
