[package]
name = "rustycamera"
version = "0.1.0"
edition = "2021"

[dependencies]
v4l = "*"
zune-core = "*"
zune-jpeg = "*"
sdl2 = "0.37"
eframe = "0.28"
catppuccin-egui = { version = "5.1", default-features = false, features = ["egui28"] }


# `zune-jpeg` package will be always built with optimizations
[profile.dev.package.zune-jpeg]
opt-level = 3
